# Lokr_fork

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  makefile  myprog_gui
cli/: cli.c  main.c
cli/features/: help.c  password_handling.c
cli/include/: password_handling.h
gui/: entry.c
gui/features/: credential_handling.c  view_vault.c
gui/include/: credential_handling.h  login_window.h  main_window.h  view_vault.h
gui/windows/: login_window.c  main_window.c  signup_window.c
include/: auth.h  crypto.h  misc.h
src/: auth.c  crypto.c  misc.c  vault.c
src/include/: vault.h
